# iacs_ipac_reader

./: LICENSE  README.md  mkdocs.yml  requirements.txt  setup.cfg  setup.py  tox.ini
docs/: index.md
src/iacs_ipac_reader/: ApplyRF.py  MANIFEST.in  __init__.py  _dock_widget.py  aid_cv2_dnn.py  background_program.py  image_processing.py
src/iacs_ipac_reader/_tests/: test_dock_widget.py
