[metadata]
name = iacs_ipac_reader
version = 0.0.9
author = Chenqi Zhang
author_email = cqzhang@g.ecc.u-tokyo.ac.jp
url = https://github.com/zcqwh/iacs_ipac_reader
license = BSD-3-Clause
description = A reader plugin for read iacs/ipac images and export .rtdc files.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/zcqwh/iacs_ipac_reader/issues
    Documentation = https://github.com/zcqwh/iacs_ipac_reader#README.md
    Source Code = https://github.com/zcqwh/iacs_ipac_reader
    User Support = https://github.com/zcqwh/iacs_ipac_reader/issues

[options]
packages = find:
python_requires = >=3.7
package_dir =
    =src

# add your package requirements here
install_requires =
    h5py>=3.5.0
    napari>=0.4.12
    napari_plugin_engine>=0.2.0
    numpy>=1.21.4
    opencv_contrib_python_headless>=4.4.0.46
    PyQt5>=5.12.3
    pandas>=1.4.0

[options.packages.find]
where = src


[options.entry_points] 
napari.plugin = 
    iacs_ipac_reader = iacs_ipac_reader
